syntax = "proto3";
package ridit;

service Ridit {
	rpc State(EmptyMsg) returns (AppState);
	rpc TriggerDownload(EmptyMsg) returns (stream DownloadStatus);
}

message EmptyMsg {}

message AppState {
	uint32 status = 1;
	string message = 2;
	string next_download_time = 3;
}

message DownloadStatus {
	string subreddit = 1;
	uint32 download_size = 2;
	uint32 downloaded = 3; 
	string filename = 4;
	string path = 5;
	string profile = 6;
}
